# a0

./: .gitignore  100-CPU-ISSUE.md  AGENTS.md  CMakeLists.txt  NEW-IO-IMPLEMENTATION-PLAN.md  PERSONA-IMPLEMENTATION.md  README.md  SUB-MODULE-REORGANIZATION-PLAN.md  TEST-COVERAGE.md  TUI-IMPLEMENTATION-SESSION.md  TUI-REFACTOR.md  ipc.spec.md  technical-specification.md  technical-specification.revise.md
.opencode/: opencode.json
blog/: 2026-06-01-enterprise-handoff-execution-17cd9677effeV3oA1jQrUNFPb9.md  2026-06-01-enterprise-panel-roadmap-17f17158effe3l0X6pyZ5qxxTv.md  convert_blog.py
components/: count_lines.tool.json  hello_skill.skill.json
demos/: prompt.md
docker/: Dockerfile.playwright  docker-compose.playwright.yml
docs/: tui-design.md  tui-eng.md
personas/: README.md  schema.json
prompts/: base.md
scripts/: browser.sh  cleanup-dev.sh  gen-docker-compose-tool-defs.sh  gen-docker-tool-defs.sh  gen-git-tool-defs.sh  playwright-bridge.js  session-to-fixture.py  tui-diag.py  tui-diag.spec.md  tui-snapshot3.py  tui-snapshot3.spec.md
sessions/: 2026-05-28-a0-mvp-19122c3eeffe8oWtGInH1MCesP.json.bz2  2026-05-28-a0-mvp-19122c3eeffe8oWtGInH1MCesP.md  2026-05-28-a0-mvp-19122c3eeffe8oWtGInH1MCesP.sha256  2026-05-28-a0-mvp-19122c3eeffe8oWtGInH1MCesP.stats.json  2026-05-28-docker-sub-module-18f02515fffeOSSZ17jUZ0MCzC.json.bz2  2026-05-28-docker-sub-module-18f02515fffeOSSZ17jUZ0MCzC.md  2026-05-28-docker-sub-module-18f02515fffeOSSZ17jUZ0MCzC.sha256  2026-05-28-docker-sub-module-18f02515fffeOSSZ17jUZ0MCzC.stats.json  2026-05-28-v2-spec-revisions-18ff9f2b7ffeHcgiA56UomZGfh.json.bz2  2026-05-28-v2-spec-revisions-18ff9f2b7ffeHcgiA56UomZGfh.md  2026-05-28-v2-spec-revisions-18ff9f2b7ffeHcgiA56UomZGfh.sha256  2026-05-28-v2-spec-revisions-18ff9f2b7ffeHcgiA56UomZGfh.stats.json  2026-05-29-agent-ecosystem-b1-c2-18bd4dd71ffe0W8EdVw0Pqt2qa.json.bz2  2026-05-29-agent-ecosystem-b1-c2-18bd4dd71ffe0W8EdVw0Pqt2qa.md  2026-05-29-agent-ecosystem-b1-c2-18bd4dd71ffe0W8EdVw0Pqt2qa.sha256  2026-05-29-agent-ecosystem-b1-c2-18bd4dd71ffe0W8EdVw0Pqt2qa.stats.json  2026-05-29-agentic-tool-system-18b3ccfb3ffe7BcL5jq85CvRBI.json.bz2  2026-05-29-agentic-tool-system-18b3ccfb3ffe7BcL5jq85CvRBI.md  2026-05-29-agentic-tool-system-18b3ccfb3ffe7BcL5jq85CvRBI.sha256  2026-05-29-agentic-tool-system-18b3ccfb3ffe7BcL5jq85CvRBI.stats.json  2026-05-29-skills-persistence-command-runner-18e71a0dbffe4Aco1VAu5qiYN7.json.bz2  2026-05-29-skills-persistence-command-runner-18e71a0dbffe4Aco1VAu5qiYN7.md  2026-05-29-skills-persistence-command-runner-18e71a0dbffe4Aco1VAu5qiYN7.sha256  (+180 more)
skills/: README.md  schema.json
src/b1/: CMakeLists.txt  a0_launcher.cpp  a0_launcher.h  a0_launcher.spec.md  b1_main.cpp  b1_main.spec.md  supervisor.cpp  supervisor.h  supervisor.spec.md  technical-specification.md
src/c2/: CMakeLists.txt  b1_registry.cpp  b1_registry.h  b1_registry.spec.md  c2_event_store.cpp  c2_event_store.h  c2_event_store.spec.md  c2_listener.cpp  c2_listener.h  c2_listener.spec.md  c2_main.cpp  c2_main.spec.md  dashboard_server.cpp  dashboard_server.h  dashboard_server.spec.md  sse_manager.cpp  sse_manager.h  sse_manager.spec.md  technical-specification.md
src/core/: CMakeLists.txt  agent_core.h  agent_core.spec.md  app_core_thread.cpp  app_core_thread.h  app_core_thread.spec.md  driven_core.cpp  driven_core.h  driven_core.spec.md  driven_core.spec.revise.md  technical-specification.md
src/docker/: CMakeLists.txt  compose_manager.cpp  compose_manager.h  compose_manager.spec.md  container_manager.cpp  container_manager.h  container_manager.spec.md  dependency_installer.cpp  dependency_installer.h  dependency_installer.spec.md  docker_cli_wrapper.cpp  docker_cli_wrapper.h  docker_cli_wrapper.spec.md  docker_tool_runner.cpp  docker_tool_runner.h  docker_tool_runner.spec.md  technical-specification.md
src/executor/: CMakeLists.txt  command_runner.cpp  command_runner.spec.md  dependency_graph.cpp  dependency_graph.h  dependency_graph.spec.md  docker_security_filter.cpp  docker_security_filter.h  docker_security_filter.spec.md  stream_registry.cpp  stream_registry.h  stream_registry.spec.md  system_handlers.cpp  system_handlers.h  system_handlers.spec.md  technical-specification.md  tool_runner.cpp  tool_runner.h  tool_runner.spec.md  tool_state.h  tool_state.spec.md
src/ipc/: CMakeLists.txt  app_core_event.capnp  ipc_protocol.h  ipc_protocol.spec.md  technical-specification.md  unix_socket.cpp  unix_socket.h  unix_socket.spec.md
src/persistence/: CMakeLists.txt  build_identity.cpp  build_identity.h  build_identity.spec.md  null_resource_provider.h  null_resource_provider.spec.md  persistence_store.h  persistence_store.spec.md  replay_engine.cpp  replay_engine.h  replay_engine.spec.md  sqlite_resource_provider.cpp  sqlite_resource_provider.h  sqlite_resource_provider.spec.md  sqlite_store.cpp  sqlite_store.h  sqlite_store.spec.md  technical-specification.md
src/skills/: CMakeLists.txt  skill_loader.cpp  skill_loader.h  skill_loader.spec.md  skill_manager.cpp  skill_manager.spec.md  skill_registry.spec.md  skills.h  skills.spec.md  technical-specification.md  validation_engine.cpp  validation_engine.h  validation_engine.spec.md  version_manager.cpp  version_manager.h  version_manager.spec.md
src/system_tools/: CMakeLists.txt  core_handlers.cpp  discovery_handlers.cpp  git_handlers.cpp  registry.cpp  registry.h
src/tui/: CMakeLists.txt  agent_tui.cpp  agent_tui.h  agent_tui.spec.md  agent_tui.spec.revise.md  clipboard.cpp  clipboard.h  clipboard.spec.md  dialog_manager.cpp  dialog_manager.h  dialog_manager.spec.md  entry_component.spec.revise.md  input_panel.cpp  input_panel.h  input_panel.spec.md  markdown_renderer.cpp  markdown_renderer.h  markdown_renderer.spec.md  message_panel.cpp  message_panel.h  message_panel.spec.md  message_panel.spec.revise.md  message_store.spec.revise.md  session_manager.cpp  session_manager.h  state_manager.spec.revise.md  status_bar.cpp  status_bar.h  status_bar.spec.md  styles.cpp  styles.h  styles.spec.md  technical-specification.md  tool_call_component.spec.revise.md
(+426 files in other folders)
